фиксики дизайна под мобилки

--- a/Sunduk.PWA/Pages/TurnHelperPage.razor
+++ b/Sunduk.PWA/Pages/TurnHelperPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/turncalc"
 
-<MudTabs Elevation="2" Rounded="true" PanelClass="pa-6">
+<MudTabs Elevation="2" Style="margin-top: -2vh" >
     <MudTabPanel Text="Фаска">
         
     </MudTabPanel>
