--- a/Sunduk.PWA/Pages/CalculatorPage.razor
+++ b/Sunduk.PWA/Pages/CalculatorPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/calculator"
 
-<MudContainer MaxWidth="MaxWidth.Medium" Class="mt-8">
+<MudContainer MaxWidth="MaxWidth.Medium" Class="mt-2">
     <MudGrid Justify="Justify.SpaceAround">
         <MudItem xs="6" sm="5" md="5" lg="5">
             <MudTextField @bind-Value="DiameterString" T="string" Label="Диаметр" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="мм" Immediate="true"/>
@@ -9,13 +9,13 @@
             <MudTextField @bind-Value="EdgesString" T="string" Label="Зубья" Variant="Variant.Text" Immediate="true"/>
         </MudItem>
         <MudItem xs="6" sm="5" md="5" lg="5">
-            <MudTextField @bind-Value="CutSpeedString" @onfocusin="@(() => CalcSpins = true)" T="string" Label="Скорость резания" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="мм/мин" Immediate="true"/>
+            <MudTextField @bind-Value="CutSpeedString" @onfocusin="@(() => CalcSpins = true)" T="string" Label="Скорость" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="мм/мин" Immediate="true"/>
         </MudItem>
         <MudItem xs="6" sm="5" md="5" lg="5">
             <MudTextField @bind-Value="FeedString" @onfocusin="@(() => CalcMinFeed = true)" T="string" Label="Подача" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="@FeedUnits" Immediate="true"/>
         </MudItem>
         <MudItem xs="6" sm="5" md="5" lg="5">
-            <MudTextField @bind-Value="SpindleSpeedString" @onfocusin="@(() => CalcSpins = false)" T="string" Label="Обороты шпинделя" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="об/мин" Immediate="true"/>
+            <MudTextField @bind-Value="SpindleSpeedString" @onfocusin="@(() => CalcSpins = false)" T="string" Label="Обороты" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="об/мин" Immediate="true"/>
         </MudItem>
         <MudItem xs="6" sm="5" md="5" lg="5">
             <MudTextField @bind-Value="MinFeedString" @onfocusin="@(() => CalcMinFeed = false)" T="string" Label="Подача" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="мм/мин" Immediate="true"/>
