--- a/Sunduk.PWA/Shared/MainLayout.razor
+++ b/Sunduk.PWA/Shared/MainLayout.razor
@@ -6,21 +6,19 @@
 <MudThemeProvider Theme="currentTheme" />
 
 <MudLayout>
-    <MudAppBar Elevation="1">
+    <MudAppBar Dense="true" Elevation="1">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-        <MudLink Typo="Typo.h5" Href="" Underline="Underline.None"><b>Sunduk</b></MudLink>
+        <MudLink Typo="Typo.h5" Href="" Underline="Underline.None">Sunduk</MudLink>
         <MudAppBarSpacer />
         <MudTooltip Text="@version" Placement="Placement.Start">
-            <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+            <MudIconButton Icon="@Icons.Material.Filled.HelpOutline" Color="Color.Inherit" Edge="Edge.End" />
         </MudTooltip>
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <NavMenu />
     </MudDrawer>
     <MudMainContent>
-        <div>
-            @Body
-        </div>
+        @Body
     </MudMainContent>
 </MudLayout>
 @code
