фикс ссылки на кнопке всякой хрени

--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -22,7 +22,7 @@
                 </MudGrid>
             </MudPaper>
         </MudLink>
-        <MudLink Href="/turncalc" Underline="Underline.None">
+        <MudLink Href="/stuff" Underline="Underline.None">
             <MudPaper Class="pa-8 ma-2">
                 <MudGrid Justify="Justify.Center">
                     <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.RoundedCorner" />
