--- a/Sunduk.PWA/Shared/NavMenu.razor
+++ b/Sunduk.PWA/Shared/NavMenu.razor
@@ -3,5 +3,5 @@
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Домой</MudNavLink>
     <MudNavLink Href="/calculator" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Calculate">Калькулятор режимов</MudNavLink>
     <MudNavLink Href="/thread" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LineWeight">Точение резьбы</MudNavLink>
-    <MudNavLink Href="/turncalc" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.RoundedCorner">Всякая хрень</MudNavLink>
+    <MudNavLink Href="/stuff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.RoundedCorner">Всякая хрень</MudNavLink>
 </MudNavMenu>
